<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@color/pdmanager_red"
            >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:layout_gravity="center_horizontal"
                />
            </FrameLayout>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textSize="24dp"
                android:textColor="@color/Dark_grey"
                android:text="@string/choose_dow"
            />
            <LinearLayout
                android:id="@+id/lDow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_margin="6dp"
                android:weightSum="7"
            >
                <Button
                    android:id="@+id/bMon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonselector"
                    android:textColor="@color/White"
                    android:layout_margin="2dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:text="@string/smonday"
                />
                <Button
                    android:id="@+id/bTue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonselector"
                    android:textColor="@color/White"
                    android:layout_margin="2dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:text="@string/stuesday"
                />
                <Button
                    android:id="@+id/bWed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonselector"
                    android:textColor="@color/White"
                    android:layout_margin="2dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:text="@string/swednesday"
                />
                <Button
                    android:id="@+id/bThu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonselector"
                    android:textColor="@color/White"
                    android:layout_margin="2dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:text="@string/sthursday"
                />
                <Button
                    android:id="@+id/bFri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonselector"
                    android:textColor="@color/White"
                    android:layout_margin="2dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:text="@string/sfriday"
                />
                <Button
                    android:id="@+id/bSat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonselector"
                    android:textColor="@color/White"
                    android:layout_margin="2dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:text="@string/ssaturday"
                />
                <Button
                    android:id="@+id/bSun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonselector"
                    android:textColor="@color/White"
                    android:layout_margin="2dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:text="@string/ssunday"
                />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/bNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_button"
        android:textColor="@color/White"
        android:layout_margin="6dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/end_config"
    />
</RelativeLayout>