<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
>
    <LinearLayout
        android:id="@+id/lLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/pdmanager_red"
            android:layout_marginBottom="12dp"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
            />
        </FrameLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lLogo"
    >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal|center_vertical"
            android:background="@color/White" >

                <Button
                    android:id="@+id/buttonPALPRM"
                    android:text="@string/title_menu10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                />

                <Button
                    android:id="@+id/buttonPairedAssociatesLearning"
                    android:text="@string/paired_associates_learning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                />

                <Button
                    android:id="@+id/buttonPatternRecognitionMemory"
                    android:text="@string/pattern_recognition_memory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                />

                <Button
                    android:id="@+id/buttonSpatialWorkingMemory"
                    android:text="@string/spatial_working_memory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                />

                <Button
                    android:id="@+id/buttonSpatialSpan"
                    android:text="@string/spatial_span"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/buttonStopSignalTask"
                    android:text="@string/stop_signal_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                />

                <Button
                    android:id="@+id/buttonAttentionSwitchingTask"
                    android:text="@string/attention_switching_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/buttonVisualAnalogueScale"
                    android:text="@string/visual_analogue_scale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"

                />

                <Button
                    android:id="@+id/buttonVisualAnalogueScale2"
                    android:text="@string/visual_analogue_scale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:textColor="@color/White"
                    android:layout_margin="6dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                />

            <Button
                android:id="@+id/buttonWisconsin"
                android:text="@string/wisconsin_card_sorting_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button"
                android:textColor="@color/White"
                android:layout_margin="6dp"
                android:textSize="24sp"
                android:textStyle="bold"
            />

            <Button
                android:id="@+id/buttonLondon"
                android:text="@string/london_towers_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button"
                android:textColor="@color/White"
                android:layout_margin="6dp"
                android:textSize="24sp"
                android:textStyle="bold"
            />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>