<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal|center_vertical"
    android:background="@color/black" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/black" >

        <TextView android:text="@string/fttoneTvInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="#FFF" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:indeterminate="false"
            android:progress="100"
            android:minHeight="50dp"
            android:minWidth="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fttoneTvTime"
            android:id="@+id/fttoneTvTime"
            android:textColor="#CCC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fttoneTvTimeNumberOfTaps"
            android:id="@+id/fttoneNumberOfTaps"
            android:textColor="#CCC" />
    </LinearLayout>

    <Button
        android:background="@drawable/button_round"
        style="@style/round_button_text"
        android:layout_marginTop="10dp"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:text="@string/fttoneTvTap"
        android:id="@+id/buttonFTTOneTap"
        android:layout_gravity="center_horizontal|center_vertical" />

</LinearLayout>