<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/pdmanager_red"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
            />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="24dp"
            android:textColor="@color/Dark_grey"
            android:text="@string/choose_username"
        />
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="24dp"
            android:textColor="@color/Dark_grey"
            android:hint="@string/username"
        />
    </LinearLayout>
    <Button
        android:id="@+id/bNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_button"
        android:textColor="@color/White"
        android:layout_margin="6dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/next_config"
        android:visibility="invisible"
    />
</RelativeLayout>