<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/pdmanager_red"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
            />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="24dp"
            android:textColor="@color/Dark_grey"
            android:text="@string/welcome"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
    >
        <Button
            android:id="@+id/bConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@color/White"
            android:layout_margin="6dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/configure_user"
        />
        <Button
            android:id="@+id/bTests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:textColor="@color/White"
            android:layout_margin="6dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/perform_tests"
        />
    </LinearLayout>
</RelativeLayout>